--- a/template/new_app/app/views/layouts/application.ejs
+++ b/template/new_app/app/views/layouts/application.ejs
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>%%title%%</title>
+	<%- stylesheet_link_tag("application", { media: "all" }) %>
 	<%- javascript_include_tag("application") %>
 </head>
 <body>
