--- a/template/new_app/public/index.html
+++ b/template/new_app/public/index.html
@@ -6,8 +6,8 @@
 
 	<link rel="stylesheet" href="assets/stylesheets/application.css">
 
-	<script src="lib/angular.min.js"></script>
-	<script src="lib/angular-ui-router.min.js"></script>
+	<script src="libs/angular.min.js"></script>
+	<script src="libs/angular-ui-router.min.js"></script>
 
 	<script src="directives/body.js"></script>
 	<script src="directives/head.js"></script>
