--- a/test/files_generated/scaffold_app/public/assets/stylesheets/scaffolds.css
+++ b/test/files_generated/scaffold_app/public/assets/stylesheets/scaffolds.css
@@ -40,7 +40,7 @@ div.field, div.actions {
 .field_with_errors {
   padding: 2px;
   background-color: red;
-  display: table;
+/*  display: table;*/
 }
 
 #error_explanation {
