--- a/template/scaffold/public/assets/stylesheets/scaffolds.css
+++ b/template/scaffold/public/assets/stylesheets/scaffolds.css
@@ -4,7 +4,7 @@ body {
   color: #333;
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
-  line-height: 18px;
+/*  line-height: 18px;*/
 }
 p, ol, ul, td {
   font-family: verdana, arial, helvetica, sans-serif;
